# vek

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  benchmark_compare.py  setup.py  test_backends
.github/workflows/: ci.yml
bench/: bench_kernels.c
bindings/rust/: vek.rs
build_cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  vek-config.cmake  vek.pc
build_cmake/Testing/Temporary/: CTestCostData.txt
cmake/: vek-config.cmake.in  vek.pc.in
docs/man/: vek.3  vek_backend_name.3  vek_init.3
examples/c/: basic.c
examples/python/: basic.py
examples/rust/: basic.rs
include/: vek.h
man/man3/: vek_backend_name.3  vek_cosine_b1.3  vek_cosine_f32.3  vek_cosine_i8.3  vek_cosine_u8.3  vek_dot_b1.3  vek_dot_f32.3  vek_dot_i8.3  vek_dot_u8.3  vek_hamming_b1.3  vek_init.3  vek_l2sq_f32.3  vek_l2sq_i8.3  vek_l2sq_u8.3
src/: dispatch.c  internal.h
src/arm/: neon.c
src/python/: vek_cext.c
src/scalar/: kernels.c
src/x86/: avx2.c  avx512.c  sse2.c
tests/: test_backends.c  test_kernels.c
